clusters/apps/movies-db/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: movies-db-route
  namespace: movies-db
  annotations:
    oatlabs.oatmilk.work/external-dns: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: gateway
      sectionName: postgres-direct
  hostnames:
    - movies-db.${CLUSTER_ZONE}
  rules:
    - backendRefs:
        - name: movies-db-edge
          port: 5432
